@@ -1,5 +1,11 @@
 2008-03-18  Dan Williams  <dcbw@redhat.com>
 
+	* src/gconf-helpers/gconf-upgrade.c
+		- (try_convert_leap, nm_gconf_migrate_0_7_wireless_security): don't
+			bother trying to convert already converted connections
+
+2008-03-18  Dan Williams  <dcbw@redhat.com>
+
 	* configure.ac
 		- Convert check for iwlib into just check for wireless.h
 
